<resources>
    <string name="app_name">broken_Project3</string>
    <string name="ek_img_content">ExportKit Image</string>
	<string name="yes_string">Yes</string>
	<string name="no_string">No</string>
	<string name="__________string">  </string>
	<string name="________string"> </string>
	<string name="__________00m_string">  00M</string>
	<string name="log_in_ek3_string">Log in</string>
	<string name="id_string">ID</string>
	<string name="password_string">Password</string>
	<string name="_________________string"> ?</string>
	<string name="enter_string">Enter </string>
	<string name="don_t_have_an_account__sign_up_string">Dont have  an account? Sign up </string>
	<string name="wait________string">Wait.......</string>
	<string name="_5_string">5</string>
	<string name="block_user_string">Block user</string>
	<string name="abusive_string">Abusive</string>
	<string name="spamming_string">Spamming</string>
	<string name="unmatch_string">Unmatch</string>
	<string name="___________string">?</string>
	<string name="sign_up_string">sign up</string>
	<string name="_____string">*</string>
	<string name="_____ek1_string">*</string>
	<string name="_____ek2_string">*</string>
	<string name="_______string">*</string>
	<string name="e_mail__string">E-mail*</string>
	<string name="_______dankook_ac_kr_string">*****@dankook.ac.kr</string>
	<string name="_010___________string">010-****-****</string>
	<string name="continue_string">Continue</string>
	<string name="_20_string">20</string>
	<string name="___string"></string>
	<string name="congratulations__string">Congratulations!</string>
	<string name="continue_ek1_string">Start </string>
	<string name="setting_ek3_string">Setting</string>
	<string name="logout_string">Logout</string>
	<string name="_______ek1_string"> </string>
	<string name="edit_profile_string">Edit Profile</string>
	<string name="____string"></string>
	<string name="on_string">On</string>
	<string name="____ek1_string"></string>
	<string name="____ek2_string"></string>
	<string name="notification_string">Notification</string>
	<string name="____ek3_string"> </string>
	<string name="off_string">Off</string>
	<string name="sign_up_ek3_string">sign up</string>

</resources>